# KiwiFlightSearch

./: .env_template  .gitignore  Pipfile  README.md  _main.py  base_flights_processor.py  driver.py  flights_processor.py  flights_processor_duration.py  flights_processor_weekends.py  iata_to_city.json  katowice_timetable_scrapper.py  kiwi_scrapper.py  kiwi_scrapper_new.py  ktw_airports_to_iata_mapping.json  main.py  new_driver.py  poz_iata_codes.txt  poznan_timetable_scrapper.py  process_iatas.ipynb  pyproject.toml  timetable_to_avaiable_iata_codes.py  tmp.ipynb  validate_iatas.py  wro_iata_codes.txt  wroclaw_timetable_scrapper.py
airport_iata_codes/: KTW_iata_codes.txt  POZ_iata_codes.txt  WRO_iata_codes.txt
airport_timetable_scrappers/: KTW_timetable_scrapper.py  POZ_timetable_scrapper.py  WRO_timetable_scrapper.py
data/: airports_to_iata_mapping.json  iata_to_country.json
html_timetable_processors/: KTW_timetable_processor.py
kiwiflight/: __init__.py  config.py  country_lookup.py  emailer.py  logging_config.py  models.py  pipeline.py
kiwiflight/processing/: base.py  duration.py  weekends.py
kiwiflight/scraping/: base_driver.py  playwright_scraper.py  selenium_scraper.py
templates/: duration_deals.html.j2  weekend_deals.html.j2
timetable_processors/: KTW_timetable_processor.py  POZ_timetable_processor.py  WRO_timetable_processor.py  timetable_to_avaiable_iata_codes.py
timetable_scrappers/: katowice_timetable_scrapper.py  poznan_timetable_scrapper.py  wroclaw_timetable_scrapper.py
