[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiwiflightsearch"
version = "0.1.0"
description = "Flight deal scraper & processor for Kiwi (weekend and duration trips)"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["flights", "scraper", "travel", "kiwi"]

# Runtime dependencies managed by uv (previously Pipenv)
dependencies = [
  "beautifulsoup4",
  "yagmail",
  "babel",
  "dacite",
  "playwright",
  "jinja2",
  "tqdm",
  "python-dotenv",
  "lxml",
  "schedule",
  "playwright-stealth>=2.0.1",
  "zstandard",
]

[project.scripts]
kiwiflight = "kiwiflight.pipeline:main_cli"

[dependency-groups]
# Development / tooling dependencies (install with: uv sync --group dev)
dev = [
  "ruff",
  "mypy",
  "jupyter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kiwiflight*"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/ for a full list of rules.
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle (Error)
    "W",      # pycodestyle (Warning)
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # Perflint
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "PLR0913", # Too many arguments in function definition
    "TRY003",  # Avoid specifying long messages outside the exception class
    "G004",    # Logging statement uses f-string
]

[tool.ruff.lint.isort]
known-first-party = ["kiwiflight"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
